@@ -5,6 +5,8 @@ ver 0.18.1 (2013/11/??)
   - log UNIX domain path names instead of "localhost"
   - open listener sockets in the order they were configured
   - don't abort if IPv6 is not available
+* output:
+  - alsa: avoid endless loop in Raspberry Pi workaround
 * filter:
   - autoconvert: fix "volume_normalization" with mp3 files
 * add missing files to source tarball
